Fix gaps on main content area

--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ ul {
 .container-main-content {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
-  gap: 10px;
+  grid-template-rows: 1fr 2fr 2fr;
+  row-gap: 40px;
   font-family: sans-serif;
   /* border: solid 4px red; */
   background: #e2e8f0;
@@ -115,7 +115,7 @@ ul {
   background: #e2e8f0;
   border: 1px solid #dfe1e5;
   border-radius: 24px;
-  padding: 7px 20px;
+  padding: 6px 20px;
   outline: none;
   font-size: 14px;
   transition: all 0.2s;
